viewport meta, title udpates

--- a/src/index.jade
+++ b/src/index.jade
@@ -2,13 +2,14 @@ doctype html
 head
   meta(http-equiv='Content-Type', content='text/html; charset=UTF-8')
   link(rel='stylesheet', href='css/main.css')
+  meta(name='viewport' content='initial-scale=1')
 
   script(src='js/bundle.js')
 
   body(layout='column')
 
     md-toolbar
-      h1.md-toolbar-tools(layout-align-gt-sm='center') Taksim Muradiye Öğrenci Yurdu
+      h1.md-toolbar-tools(layout-align='center') Taksim Muradiye Erkek Öğrenci Yurdu
 
     #header
       md-toolbar.md-tall(md-scroll-shrink layout='row' flex)
