card bg pattern update

--- a/src/index.jade
+++ b/src/index.jade
@@ -29,7 +29,7 @@ head
             br
             | Beyoğlu, İstanbul
 
-      md-card
+      md-card.announcements
         img(src='pattern.png')
         md-card-content(flex)
           h2.md-title Duyurular
