--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -18,3 +18,8 @@ ng-md-icon svg
 
 .no-text-transform
   text-transform: none
+
+.announcements img
+  max-width: 100%
+  max-height: 300px
+  overflow: hidden
