--- a/css/main.css
+++ b/css/main.css
@@ -7073,5 +7073,10 @@ ng-md-icon svg {
 .no-text-transform {
   text-transform: none;
 }
+.announcements img {
+  max-width: 100%;
+  max-height: 300px;
+  overflow: hidden;
+}
 
 /*# sourceMappingURL=main.css.map */
