--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -12,6 +12,10 @@ ng-md-icon svg
   top: -60px
   z-index: 100
 
+  h2
+    color: rgb(83,109,254);
+    font-weight: 400;
+
 @media(min-width: 1200px)
   #content
     max-width: 1200px
