--- a/src/views/header.jade
+++ b/src/views/header.jade
@@ -1,9 +1,10 @@
-md-toolbar.md-tall
+md-toolbar.md-tall.md-hue-3
     span(flex)
     .md-toolbar-tools.md-toolbar-tools-bottom(layout='column' layout-align='center')
-      span Özel Muradiye Yükseköğrenim Erkek Öğrenci Yurdu
+      img(src='images/logo.png')
+    span(flex)
   #header
-    md-toolbar.md-tall(md-scroll-shrink layout='row' flex)
+    md-toolbar.md-tall.md-hue-3(md-scroll-shrink layout='row' flex)
       .md-toolbar-tools(layout-align='center')
-        md-button(href='tel:0 212 235 23 72') 0(212) 235 23 72
-        md-button.no-text-transform(href='mailto:bilgi@muradiye.tk') bilgi@muradiye.tk
+        md-button.md-accent(href='tel:0 212 235 23 72') 0(212) 235 23 72
+        md-button.md-accent.no-text-transform(href='mailto:bilgi@muradiye.tk') bilgi@muradiye.tk
