--- a/src/views/header.jade
+++ b/src/views/header.jade
@@ -1,7 +1,7 @@
 md-toolbar.md-tall.md-hue-3
     span(flex)
     .md-toolbar-tools.md-toolbar-tools-bottom(layout='column' layout-align='center')
-      img(src='images/logo.png')
+      img.logo(src='images/logo.png')
     span(flex)
   #header
     md-toolbar.md-tall.md-hue-3(md-scroll-shrink layout='row' flex)
