--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -16,7 +16,7 @@ img.logo
   z-index: 100
 
   h2
-    color: rgb(83,109,254);
+    color: #32c1d7;
     font-weight: 400;
 
 @media(min-width: 1200px)
