--- a/src/views/header.jade
+++ b/src/views/header.jade
@@ -1,10 +1,11 @@
-md-toolbar.md-tall.md-hue-3
+#header.md-whiteframe-z1
+  md-toolbar.md-tall(md-theme='alt')
     span(flex)
     .md-toolbar-tools.md-toolbar-tools-bottom(layout='column' layout-align='center')
       img.logo(src='images/logo.png')
     span(flex)
-  #header
-    md-toolbar.md-tall.md-hue-3(md-scroll-shrink layout='row' flex)
-      .md-toolbar-tools(layout-align='center')
-        md-button.md-accent(href='tel:0 212 235 23 72') 0(212) 235 23 72
-        md-button.md-accent.no-text-transform(href='mailto:bilgi@muradiye.tk') bilgi@muradiye.tk
+
+  md-toolbar.md-tall.md-hue-3(md-theme='alt' md-scroll-shrink layout='row' flex)
+    .md-toolbar-tools(layout-align='center')
+      md-button.md-accent(href='tel:0 212 235 23 72') 0(212) 235 23 72
+      md-button.md-accent.no-text-transform(href='mailto:bilgi@muradiye.tk') bilgi@muradiye.tk
