--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,12 +1,14 @@
 @import "../../node_modules/angular-material/angular-material.css"
 
+html, body
+  background: rgb(236,239,241)
 
 ng-md-icon svg
   position: relative
   top: 6px
 
 img.logo
-  max-width 100%
+  max-width 80%
 
 #content
   width: 100%
