--- a/src/index.jade
+++ b/src/index.jade
@@ -2,6 +2,7 @@ doctype html
 head
   meta(http-equiv='Content-Type', content='text/html; charset=UTF-8')
   meta(name='viewport' content='initial-scale=1')
+  title Taksim Muradiye
   link(rel='apple-touch-icon' sizes='57x57' href='images/apple-icon-57x57.png')
   link(rel='apple-touch-icon' sizes='60x60' href='images/apple-icon-60x60.png')
   link(rel='apple-touch-icon' sizes='72x72' href='images/apple-icon-72x72.png')
