responsive updates for inline images

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -21,6 +21,9 @@ img.logo
     color: #32c1d7;
     font-weight: 400;
 
+  img
+    max-width 90%
+
 @media(min-width: 1200px)
   #content
     max-width: 1200px
