image width fix

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -21,8 +21,8 @@ img.logo
     color: #32c1d7;
     font-weight: 400;
 
-  img
-    max-width 90%
+  md-card-content img
+    max-width 100%
 
 @media(min-width: 1200px)
   #content
