--- a/src/index.jade
+++ b/src/index.jade
@@ -28,6 +28,7 @@ head
     {
        "@context": "http://schema.org",
        "@type": "Organization",
+       "name": "Taksim Muradiye Yükseköğrenim Erkek Öğrenci Yurdu",
        "url": "http://muradiye.tk",
        "contactPoint": [{
          "@type": "ContactPoint",
